<resources>
    <string name="app_name">zunoapp</string>
    <string name="logo">ZUNO.</string>

    <string name="bem_vindo">Bem-vindo de volta!</string>
    <string name="titulo_cadastro">Cadastre-se</string>

    <string name="subtitulo_bem_vindo">Estamos felizes em ter você aqui novamente</string>
    <string name="subtitulo_cadastrese">Estamos felizes em ter você aqui</string>

    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="deslogar">Deslogar</string>

    <string name="texto_cadastro">Ainda não tem uma conta? Clique aqui</string>
    <string name="texto_login">Já tem uma conta? Clique aqui</string>

    <string name="texto_nome">Nome</string>
    <string name="texto_email">Email</string>
    <string name="texto_senha">Senha</string>

    <string name="inicio">Início</string>
    <string name="criar">Criar</string>
    <string name="perfil">Perfil</string>
    <string name="zuno">ZUNO</string>
    <string name="todo">TODO</string>
    <string name="podcasts">Podcasts</string>
    <string name="videos">Videos</string>
    <string name="m_sicas">Músicas</string>
    <string name="menu" />
    <string name="_000_mil_visualiza_es_h_0_dias">000 mil visualizações · há 0 dias</string>
    <string name="search" />

</resources>