<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormLogin">

    <!--
    cria-se um id pois os outros componentes irão se referenciar
    -->

    <!--
    não coloquei a constraint horizontal que repete em
    todas as textview no style pois da erro
    -->

    <TextView
        style="@style/TextFormLogin"
        android:id="@+id/logo"
        android:text="@string/logo"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        />

    <TextView
        style="@style/TextFormLogin"
        android:id="@+id/bem_vindo"
        android:text="@string/bem_vindo"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_margin="20dp"
        />

    <TextView
        style="@style/TextFormLogin"
        android:id="@+id/subtitulo_bem_vindo"
        android:text="@string/subtitulo_bem_vindo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bem_vindo"
        android:layout_margin="5dp"
        />


    <View
        style="@style/ContainerComponentsFormLogin"
        android:id="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitulo_bem_vindo"
        />

    <!--eu do futuro: falta criar o vetor assets de email e senha-->
    <EditText
        style="@style/EditTextFormLogin"
        android:id="@+id/edit_email"
        android:hint="Email"
        android:drawableRight="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        />

    <EditText
        style="@style/EditTextFormLogin"
        android:id="@+id/edit_senha"
        android:hint="Senha"
        android:drawableRight="@drawable/ic_eye"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        />

    <!--Botão-->
    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        android:text="@string/entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        />





</androidx.constraintlayout.widget.ConstraintLayout>